--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,5 +13,9 @@
     font-size: 48px;
     font-family: 'Kaushan Script', cursive;
     }   
+    
+    .credit {
+        display: none;
+    }
       
 }   
